# data-analysis-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: __main__.py  chatbot_app.py  config.py  exceptions.py  llm_providers.py  server.py  statistical_tests.py  visualization.py  web_app.py
static/css/: chatbot_styles.css
static/js/: chatbot_scripts.js
templates/: chatbot.html
tests/: test_statistical_tests_async.py  test_visualization_async.py
