[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis-assistant"
version = "0.1.0"
description = "Data Analysis Assistant based on MCP Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "mcp",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "python-jose[cryptography]~=3.3",
    "redis~=5.0",
    "pydantic-settings~=2.0",
    "structlog~=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]